syntax = "proto3";

package api.v1;

import "google/protobuf/timestamp.proto";

option go_package = "~/go";

service GameService {
  rpc AddPlayer(Player) returns (Player) {}
  rpc GetPlayer(PlayerID) returns (Player) {}
  rpc MovePlayer(PlayerMovement) returns (Player) {}
  rpc GetPlayers(Empty) returns (stream Players) {}
}

message PlayerID {
  string id = 1;
}

message Player {
  PlayerID id = 1;
  string name = 2;
  float x = 3;
  float y = 4;
  float radius = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message Players {
  repeated Player players = 1;
}

message PlayerMovement {
  PlayerID id = 1;
  float x = 2;
  float y = 3;
  google.protobuf.Timestamp timestamp = 4;
}

message Empty {}